--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 body {
-  margin: 0;
+  /* margin: 0; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif,'BoutrosMBCDinkum';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #171d25 !important;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 code {
